funcionalidad de boton attend y se arreglo el error de glith

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="attend">Asistiré</string>
     <string name="organizerData">Datos Organizador</string>
     <string name="place">Lugar de Evento</string>
+    <string name="no_close_sesion">No Cerrar Sesión</string>
 </resources>
